Change MNC to SPEC

--- a/guidelines.html
+++ b/guidelines.html
@@ -177,7 +177,7 @@ pre .tex .formula {
 <ul>
 <li>Prof Michael Edwards (C2EC)</li>
 <li>Dr David Isaac (MRC),</li>
-<li>Dr Paul Williams (MNC)</li>
+<li>Dr Paul Williams (SPEC)</li>
 </ul>
 
 <h2 id="eg-353assessmentcomponents.30credits">EG&#8211;353 Assessment Components. (30 credits)</h2>
@@ -323,7 +323,7 @@ Our advice is to leave at least announcement notifications turned on. It’s wor
 
 <h2 id="communications">Communications</h2>
 
-<p>The Blackboard Research project site should be referred to constantly for updates and announcements. E-mails from Dr Chris Jobling (EG&#8211;353 coordinator), and the research centre project coordinators Prof Michael Edwards (C2EC), Dr David Isaacs (MRC) and Dr Paul Williams (MNC) are relevant to all students and should be noted and recorded for future reference.</p>
+<p>The Blackboard Research project site should be referred to constantly for updates and announcements. E-mails from Dr Chris Jobling (EG&#8211;353 coordinator), and the research centre project coordinators Prof Michael Edwards (C2EC), Dr David Isaacs (MRC) and Dr Paul Williams (SPEC) are relevant to all students and should be noted and recorded for future reference.</p>
 
 <h2 id="footnotes">Footnotes</h2>
 
